fix: fix search-form stretching when overload user-navigation-menu

--- a/css/style.css
+++ b/css/style.css
@@ -281,6 +281,7 @@ body {
 .search-form {
   position: relative;
   display: flex;
+  align-self: flex-start;
   width: 440px;
 
   margin: 0;
